alguns ajustes pra rodar no Windows com WSL2

--- a/provisioning03.yml
+++ b/provisioning03.yml
@@ -3,14 +3,16 @@
   tasks:
     - name: 'Instala o PHP'
       apt:
-        name: php
+        name: php-common
         state: latest
       become: yes
+
     - name: 'Instala o Apache2'
       apt:
         name: apache2
         state: latest
       become: yes
+      
     - name: 'Instala o modphp'
       apt:
         name: libapache2-mod-php
