--- a/provisioning02.yml
+++ b/provisioning02.yml
@@ -3,6 +3,6 @@
   tasks:
     - name: 'Instala o PHP'
       apt:
-        name: php
+        name: php-common
         state: latest
       become: yes
