--- a/provisioning05.yml
+++ b/provisioning05.yml
@@ -8,8 +8,8 @@
         - apache2
         - libapache2-mod-php
         - php-gd
-          #        - libssh2-php
-          #        - php-mcrypt
+        - php-ssh2
+        - php-crypt-gpg
         - mysql-server
         - python3-mysqldb
         - php-mysql
