--- a/provisioning07.yml
+++ b/provisioning07.yml
@@ -1,26 +1,37 @@
 ---
 - hosts: all
+
+  handlers:
+    - name: restart apache
+      service:
+        name: apache2
+        state: restarted
+      become: yes
+        
   tasks:
     - name: 'Instala pacotes de dependência'
       apt:
         name:
-        - php
+        - php-common
         - apache2
         - libapache2-mod-php
         - php-gd
-          #        - libssh2-php
-          #        - php-mcrypt
+        - php-ssh2
+        - php-crypt-gpg
         - mysql-server
         - python3-mysqldb
         - php-mysql
         state: latest
+#        update_cache: yes
       become: yes
-      
+
     - name: 'Cria o banco do MySQL'
       mysql_db:
         name: wordpress_db
         login_user: root
         state: present
+      become: yes
+
     - name: 'Cria o usuário do MySQL'
       mysql_user:
         login_user: root
@@ -28,3 +39,42 @@
         password: 12345
         priv: 'wordpress_db.*:ALL'
         state: present
+      become: yes
+
+    - name: 'Baixa o arquivo do Wordpress'
+      get_url:
+        url: 'https://wordpress.org/latest.tar.gz'
+        dest: '/tmp/wordpress.tar.gz'
+
+    - name: 'Descompacta o arquivo do Wordpress'
+      unarchive:
+        src: '/tmp/wordpress.tar.gz'
+        dest: '/var/www/'
+        remote_src: yes
+      become: yes
+
+    - name: 'Criando o arquivo de configuração do Wordpress'
+      copy:
+        src: '/var/www//wordpress/wp-config-sample.php'
+        dest: '/var/www//wordpress/wp-config.php'
+        remote_src: yes
+      become: yes
+      
+    - name: 'Configura o wp-config.php com as informações do banco de dados'
+      replace:
+        path: '/var/www//wordpress/wp-config.php'
+        regexp: '{{ item.regex: }}'
+        replace: '{{ item.value }}'
+      with_items:
+        - { regex: 'database_name_here', value: 'wordpress_db'}
+        - { regex: 'username_here', value: 'wordpress_user'}
+        - { regex: 'password_here', value: '12345'}
+      become: yes
+
+    - name: 'Configura o Apache para servir o Wordpress'
+      copy:
+        src: 'files/000-default.conf'
+        dest: '/etc/apache2/sites-available/000-default.conf'
+      become: yes
+      notify:
+       - restart apache
