--- a/v3/Vagrantfile
+++ b/v3/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
       end
       machine.vm.provision "shell", inline: "sed -i 's/PasswordAuthentication\ no/PasswordAuthentication\ yes/' /etc/ssh/sshd_config", privileged: true
       machine.vm.provision "shell", inline: "systemctl restart sshd", privileged: true
-      #machine.vm.provision "shell", inline: "apt update", privileged: true
+      machine.vm.provision "shell", inline: "apt clean all && apt update", privileged: true
       machine.vm.synced_folder ".", "/vagrant", disabled: true
       if "#{name}" == "server-app"
         #machine.vm.network "forwarded_port", guest: 80, host: 8080
